 * lib/Mail/DKIM/Verifier.pm, Signer.pm, Algorithm/Base.pm
   (finish_header): provide reference to entire list of headers at
   completion of header, so that canonicalizers do not need to store
   their own copy of the header
 * lib/Mail/DKIM/Canonicalization/DkimCommon.pm: do not store header as
   parsed, rather only canonicalize header within finish_header()

2010-06-03: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm: prevent abuse- if a message has more than
   50 signatures headers, we start ignoring them (it's unreasonable for
   a message to have more than a very few signature headers).

2010-04-08: Jason Long <jlong@messiah.edu>
 * t/verifier.t: wrote some tests for DomainKey signatures with empty,
   missing, or invalid q= tag values
 * lib/Mail/DKIM/Verifier.pm: move use of check_signature_identity() out
   of finish_header() and into check_and_verify_signature(); this fixes
   an issue with getting wrong error codes when q= tag is broken.

 -- VERSION 0.38 --

2010-03-31: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkSignature.pm, Signature.pm: avoid calling lc() on
   an undefined value (this generates warnings in Perl 5.12.x).
   Patch contributed by Mark Martinec.

2010-03-01: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PrivateKey.pm (load): fix bug where a private key file
   named '0' could not be loaded

2010-03-01: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkSignature.pm (new): accept Key parameter when
   constructing a DomainKey signature object

2010-02-27: Jason Long <jlong@messiah.edu>
 * t/external_signer.t: test use of an alternate object for Key
   during a "sign" operation

2010-02-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: document use of an alternate object for
   PrivateKey objects

2010-02-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: import PrivateKey.pm in this module,
   rather than in the Algorithm modules

2010-02-24: Jason Long <jlong@messiah.edu>